@startuml
skinparam nodesep 10
hide circle
hide empty members
class "Resource" [[{None}]] {
    {field} identifier : string  
    {field} description : string  
    {field} title : string  
    {field} publisher : string  
    {field} contactPoint : string  
    {field} status : string  
    {field} theme : string  
}
class "DatasetSeries" [[{None}]] {
    {field} identifier(i) : string  
    {field} description(i) : string  
    {field} title(i) : string  
    {field} publisher(i) : string  
    {field} contactPoint(i) : string  
    {field} status(i) : string  
    {field} theme(i) : string  
}
class "LiceneseDocument" [[{None}]] {
    {field} title : string  
}
class "QualityMeasurement" [[{None}]] {
    {field} identifier : string  
    {field} value : string  
    {field} generatedAtTime : datetime  
}
class "Dataset" [[{None}]] {
    {field} identifier(i) : string  
    {field} description(i) : string  
    {field} title(i) : string  
    {field} publisher(i) : string  
    {field} contactPoint(i) : string  
    {field} status(i) : string  
    {field} theme(i) : string  
}
"Resource" --> "0..1" "Resource" : "wasDerivedFrom"
"Resource" --> "0..1" "DatasetSeries" : "inSeries"
"Resource" *--> "0..1" "LiceneseDocument" : "license"
"QualityMeasurement" --> "1" "Resource" : "computedOn"
"Resource" ^-- "Dataset"
class "Metric" [[{None}]] {
    {field} identifier : string  
    {field} prefLabel : string  
    {field} definition : string  
    {field} expectedDataType : string  
    {field} inDimension : Dimension  
}
class "Container" [[{None}]] {

}
"QualityMeasurement" --> "1" "Metric" : "isMeasurementOf"
"Container" *--> "0..*" "QualityMeasurement" : "qualityMeasurements"
class "PeriodOfTime" [[{None}]] {
    {field} hasBeginning : date  
    {field} hasEnd : date  
}
"Dataset" *--> "0..1" "PeriodOfTime" : "temporal"
"Container" *--> "0..*" "Metric" : "metrics"
class "Kind" [[{None}]] {
    {field} hasEmail : string  
}
class "Distribution" [[{None}]] {
    {field} identifier : string  
    {field} title : string  
    {field} description : string  
    {field} accessURL : string  
    {field} modified : date  
    {field} version : string  
}
"Container" *--> "0..*" "Distribution" : "distributions"
"Dataset" --> "0..1" "Distribution" : "distribution"
"Container" *--> "0..*" "DatasetSeries" : "series"
"Dataset" --> "0..1" "DatasetSeries" : "inSeries"(i)
"Dataset" ^-- "DatasetSeries"
class "DataCatalog" [[{None}]] {
    {field} identifier(i) : string  
    {field} description(i) : string  
    {field} title(i) : string  
    {field} publisher(i) : string  
    {field} contactPoint(i) : string  
    {field} status(i) : string  
    {field} theme(i) : string  
}
"Container" *--> "0..*" "Dataset" : "datasets"
"DataCatalog" --> "0..*" "Dataset" : "dataset"
"Dataset" ^-- "DataCatalog"
"Container" *--> "1" "DataCatalog" : "datacatalog"
class "Concept" [[{None}]] {
    {field} prefLabel : string  
    {field} identifier : string  
    {field} example : string  
    {field} altLabel : string  
}
"Container" *--> "0..*" "Concept" : "concepts"
class "Agent" [[{None}]] {
    {field} name : string  
}
@enduml
